--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,6 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 body {
   font-family: "Poppins", sans-serif;
 }
